--- a/frontend/src/components/RightSide/RightSide.css
+++ b/frontend/src/components/RightSide/RightSide.css
@@ -1,6 +1,10 @@
 #right-side {
+    position: fixed;
+    top: 0vh;
+    right: 0vw;
+
     height: 100vh;
-    width: 20vw;
+    width: 10vw;
 
     display: flex;
     justify-content: center;
